--- a/.env-sample
+++ b/.env-sample
@@ -1,4 +1,4 @@
-REACT_APP_API_URL=https://js-post-api.herokuapp.com/api
+REACT_APP_API_URL=https://totoromilkteaapi.herokuapp.com/api
 
 # Firebase Config
 REACT_APP_FIREBASE_API=YOUR_FIREBASE_PROJECT_API
