--- a/package.json
+++ b/package.json
@@ -7,12 +7,10 @@
     "@testing-library/react": "^11.2.6",
     "@testing-library/user-event": "^12.8.3",
     "axios": "^0.21.1",
-    "emailjs-com": "^2.6.4",
     "jquery": "^3.6.0",
     "node-modules": "^1.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-html-email": "^3.0.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "web-vitals": "^1.1.1"
@@ -21,7 +19,8 @@
     "start": "set port = 3000 && react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "json-server": "--watch db.json --port"
   },
   "eslintConfig": {
     "extends": [
